adding link to css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <<html>
 <head>
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<title>The Git Hub Test</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
 	<h3>What we don't know</h3>
 	<p>EVERYTHING!!!!!!</p>
 	<p>No.... No... No idea</p>
-	<h4>Break Time</h4>
+	<h4>Break Time</h4> 
 
 </body>
 </html>
